--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ jdk:
 install:
   - gem install bundler
   - bundle install
+  - npm install coffee-script
+  - export PATH=$PATH:./node_modules/.bin
 script: buildr clean package
