--- a/build.yaml
+++ b/build.yaml
@@ -16,7 +16,6 @@ artifacts:
   ejb_api: org.apache.geronimo.specs:geronimo-ejb_3.1_spec:jar:1.0.2
   javaee_api: javax:javaee-api:jar:6.0
   javax_annotation: com.google.code.findbugs:jsr305:jar:1.3.9
-  json: org.json:json:jar:20090211
   jackson_core: org.codehaus.jackson:jackson-core-asl:jar:1.9.4
   jackson_mapper: org.codehaus.jackson:jackson-mapper-asl:jar:1.9.4
   javax_validation: javax.validation:validation-api:jar:1.0.0.GA
@@ -29,3 +28,6 @@ artifacts:
 
   geolatte_geom: org.geolatte:geolatte-geom:jar:0.12-rf
   jts: com.vividsolutions:jts:jar:1.13
+
+  # JEE7 json library
+  javax_json: org.glassfish:javax.json:jar:1.0-b02
