--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,7 @@ artifacts:
   jackson_core: org.codehaus.jackson:jackson-core-asl:jar:1.9.4
   jackson_mapper: org.codehaus.jackson:jackson-mapper-asl:jar:1.9.4
   javax_validation: javax.validation:validation-api:jar:1.0.0.GA
+  javax_inject: javax.inject:javax.inject:jar:1
 
   slf4j_api: org.slf4j:slf4j-api:jar:1.6.6
   slf4j_jdk14: org.slf4j:slf4j-jdk14:jar:1.6.6
@@ -32,3 +33,15 @@ artifacts:
 
   # JEE7 json library
   javax_json: org.glassfish:javax.json:jar:1.0-b02
+
+  gwt_openlayers: org.gwtopenmaps.openlayers:gwt-openlayers-client:jar:0.9
+  gwt_user: com.google.gwt:gwt-user:jar:2.5.1
+  gwt_dev: com.google.gwt:gwt-dev:jar:2.5.1
+  gwt_gin: com.google.gwt.inject:gin:jar:2.0.0
+  javax_validation: javax.validation:validation-api:jar:1.0.0.GA
+  javax_validation_sources: javax.validation:validation-api:jar:sources:1.0.0.GA
+
+  google_guice: com.google.inject:guice:jar:3.0
+  google_guice_assistedinject: com.google.inject.extensions:guice-assistedinject:jar:3.0
+  aopalliance: aopalliance:aopalliance:jar:1.0 # Required for guice
+  findbugs_annotations: com.google.code.findbugs:annotations:jar:1.3.9
