--- a/build.yaml
+++ b/build.yaml
@@ -22,17 +22,9 @@ artifacts:
   javax_validation: javax.validation:validation-api:jar:1.0.0.GA
   javax_inject: javax.inject:javax.inject:jar:1
 
-  slf4j_api: org.slf4j:slf4j-api:jar:1.6.6
-  slf4j_jdk14: org.slf4j:slf4j-jdk14:jar:1.6.6
   infomas_annotation_detector: eu.infomas:annotation-detector:jar:3.0.0
 
-  geolatte_common: org.geolatte:geolatte-common:jar:0.5
-
-  geolatte_geom: org.geolatte:geolatte-geom:jar:0.12-rf
-  jts: com.vividsolutions:jts:jar:1.13
-
-  # JEE7 json library
-  javax_json: org.glassfish:javax.json:jar:1.0-b02
+  javax_json: org.glassfish:javax.json:jar:1.0.1
 
   gwt_openlayers: org.gwtopenmaps.openlayers:gwt-openlayers-client:jar:0.9
   gwt_openlayers_server: org.gwtopenmaps.openlayers:gwt-openlayers-server:jar:0.9
@@ -46,3 +38,10 @@ artifacts:
   google_guice_assistedinject: com.google.inject.extensions:guice-assistedinject:jar:3.0
   aopalliance: aopalliance:aopalliance:jar:1.0 # Required for guice
   findbugs_annotations: com.google.code.findbugs:annotations:jar:1.3.9
+
+  jeo: org.realityforge.jeo:jeo:jar:0.1
+  #geolatte_common: org.geolatte:geolatte-common:jar:0.5
+  geolatte_geom: org.geolatte:geolatte-geom:jar:0.12-rf
+  jts: com.vividsolutions:jts:jar:1.13
+  slf4j_api: org.slf4j:slf4j-api:jar:1.6.6
+  slf4j_jdk14: org.slf4j:slf4j-jdk14:jar:1.6.6
