--- a/build.yaml
+++ b/build.yaml
@@ -45,3 +45,5 @@ artifacts:
   jts: com.vividsolutions:jts:jar:1.13
   slf4j_api: org.slf4j:slf4j-api:jar:1.6.6
   slf4j_jdk14: org.slf4j:slf4j-jdk14:jar:1.6.6
+
+  rest_field_filter: org.realityforge.rest.field_filter:rest-field-filter:jar:0.1
