--- a/build.yaml
+++ b/build.yaml
@@ -47,3 +47,5 @@ artifacts:
   slf4j_jdk14: org.slf4j:slf4j-jdk14:jar:1.6.6
 
   rest_field_filter: org.realityforge.rest.field_filter:rest-field-filter:jar:0.1
+
+  geolatte_geom_eclipselink: org.realityforge.jeo.geolatte.jpa.eclipselink:geolatte-geom-eclipselink:jar:0.1
