--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,16 @@
     <servlet-class>org.gwtopenmaps.openlayers.server.GwtOpenLayersProxyServlet</servlet-class>
   </servlet>
 
+  <servlet>
+    <servlet-name>ManifestServlet</servlet-name>
+    <servlet-class>fgis.server.ManifestServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>ManifestServlet</servlet-name>
+    <url-pattern>/footprints.manifest</url-pattern>
+  </servlet-mapping>
+
   <servlet-mapping>
     <servlet-name>map_proxy</servlet-name>
     <url-pattern>/map_proxy/*</url-pattern>
