--- a/build.yaml
+++ b/build.yaml
@@ -6,11 +6,12 @@ repositories:
    - http://github.com/realityforge/repository/raw/master
 
 artifacts:
+  javax_servlet: org.apache.geronimo.specs:geronimo-servlet_3.0_spec:jar:1.0
+  javax_rs: javax.ws.rs:jsr311-api:jar:1.1.1
   javax_persistence: org.hibernate.javax.persistence:hibernate-jpa-2.0-api:jar:1.0.0.Final
   javax_validation: javax.validation:validation-api:jar:1.0.0.GA
   javax_transaction: javax.transaction:jta:jar:1.1
   ejb_api: org.apache.geronimo.specs:geronimo-ejb_3.1_spec:jar:1.0.2
-  javaee_api: javax:javaee-api:jar:6.0
   javax_annotation: com.google.code.findbugs:jsr305:jar:1.3.9
   jackson_core: org.codehaus.jackson:jackson-core-asl:jar:1.9.4
   jackson_mapper: org.codehaus.jackson:jackson-mapper-asl:jar:1.9.4
