--- a/build.yaml
+++ b/build.yaml
@@ -45,7 +45,9 @@ artifacts:
 
   geolatte_geom_eclipselink: org.realityforge.jeo.geolatte.jpa.eclipselink:geolatte-geom-eclipselink:jar:0.3
 
-  gwt_appcache_server: org.realityforge.gwt.appcache:gwt-appcache-server:jar:0.2
+  gwt_appcache_client: org.realityforge.gwt.appcache:gwt-appcache-client:jar:0.6
+  gwt_appcache_linker: org.realityforge.gwt.appcache:gwt-appcache-linker:jar:0.6
+  gwt_appcache_server: org.realityforge.gwt.appcache:gwt-appcache-server:jar:0.6
 
   g_leaflet_draw: org.peimari:g-leaflet-draw:jar:0.4.0
   g_leaflet: org.peimari:g-leaflet:jar:0.4.0
