--- a/build.yaml
+++ b/build.yaml
@@ -49,6 +49,8 @@ artifacts:
   gwt_appcache_linker: org.realityforge.gwt.appcache:gwt-appcache-linker:jar:0.6
   gwt_appcache_server: org.realityforge.gwt.appcache:gwt-appcache-server:jar:0.6
 
+  gwt_cache_filter: org.realityforge.gwt.cache-filter:gwt-cache-filter:jar:0.3
+
   g_leaflet_draw: org.peimari:g-leaflet-draw:jar:0.4.0
   g_leaflet: org.peimari:g-leaflet:jar:0.4.0
 
