--- a/build.yaml
+++ b/build.yaml
@@ -23,8 +23,8 @@ artifacts:
 
   javax_json: org.glassfish:javax.json:jar:1.0.3
 
-  gwt_user: com.google.gwt:gwt-user:jar:2.6.0-rc4
-  gwt_dev: com.google.gwt:gwt-dev:jar:2.6.0-rc4
+  gwt_user: com.google.gwt:gwt-user:jar:2.6.0
+  gwt_dev: com.google.gwt:gwt-dev:jar:2.6.0
   gwt_gin: com.google.gwt.inject:gin:jar:2.1.2
   javax_validation: javax.validation:validation-api:jar:1.0.0.GA
   javax_validation_sources: javax.validation:validation-api:jar:sources:1.0.0.GA
