--- a/build.yaml
+++ b/build.yaml
@@ -23,6 +23,7 @@ artifacts:
 
   javax_json: org.glassfish:javax.json:jar:1.0.3
 
+  # GWT Dependencies
   gwt_user: com.google.gwt:gwt-user:jar:2.6.0
   gwt_dev: com.google.gwt:gwt-dev:jar:2.6.0
   gwt_gin: com.google.gwt.inject:gin:jar:2.1.2
