Move jackson dependencies

--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,6 @@ artifacts:
   javax_transaction: javax.transaction:jta:jar:1.1
   ejb_api: org.apache.geronimo.specs:geronimo-ejb_3.1_spec:jar:1.0.2
   javax_annotation: com.google.code.findbugs:jsr305:jar:1.3.9
-  jackson_core: org.codehaus.jackson:jackson-core-asl:jar:1.9.4
-  jackson_mapper: org.codehaus.jackson:jackson-mapper-asl:jar:1.9.4
   javax_validation: javax.validation:validation-api:jar:1.0.0.GA
   javax_inject: javax.inject:javax.inject:jar:1
 
@@ -29,6 +27,10 @@ artifacts:
   gwt_gin: com.google.gwt.inject:gin:jar:2.1.2
   javax_validation: javax.validation:validation-api:jar:1.0.0.GA
   javax_validation_sources: javax.validation:validation-api:jar:sources:1.0.0.GA
+
+  # Jackson Dependencies
+  jackson_core: org.codehaus.jackson:jackson-core-asl:jar:1.9.4
+  jackson_mapper: org.codehaus.jackson:jackson-mapper-asl:jar:1.9.4
 
   google_guice: com.google.inject:guice:jar:3.0
   google_guice_assistedinject: com.google.inject.extensions:guice-assistedinject:jar:3.0
