--- a/build.yaml
+++ b/build.yaml
@@ -7,14 +7,10 @@ repositories:
    - http://maven.vaadin.com/vaadin-addons
 
 artifacts:
-  javax_servlet: org.apache.geronimo.specs:geronimo-servlet_3.0_spec:jar:1.0
-  javax_rs: javax.ws.rs:jsr311-api:jar:1.1.1
-  javax_persistence: org.hibernate.javax.persistence:hibernate-jpa-2.0-api:jar:1.0.0.Final
-  javax_validation: javax.validation:validation-api:jar:1.0.0.GA
-  javax_transaction: javax.transaction:jta:jar:1.1
-  ejb_api: org.apache.geronimo.specs:geronimo-ejb_3.1_spec:jar:1.0.2
-  javax_annotation: com.google.code.findbugs:jsr305:jar:1.3.9
-  javax_validation: javax.validation:validation-api:jar:1.0.0.GA
+  javax_javaee: javax:javaee-api:jar:7.0
+  javax_javaee_endorsed: javax:javaee-endorsed-api:jar:7.0
+
+  javax_jsr305: com.google.code.findbugs:jsr305:jar:1.3.9
   javax_inject: javax.inject:javax.inject:jar:1
 
   infomas_annotation_detector: eu.infomas:annotation-detector:jar:3.0.0
@@ -35,7 +31,6 @@ artifacts:
   google_guice: com.google.inject:guice:jar:3.0
   google_guice_assistedinject: com.google.inject.extensions:guice-assistedinject:jar:3.0
   aopalliance: aopalliance:aopalliance:jar:1.0 # Required for guice
-  findbugs_annotations: com.google.code.findbugs:annotations:jar:1.3.9
 
   jeo: org.realityforge.jeo:jeo:jar:0.5
 
