--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -1,4 +1,4 @@
-<% user_code = ENV["USER"] %>
+<% user_code = ENV['USER'] %>
 <% prefix = "#{user_code}_" %>
 devhost: &devhost
   username: <%= user_code %>
