--- a/build.yaml
+++ b/build.yaml
@@ -8,6 +8,7 @@ artifacts:
   javax_javaee: javax:javaee-api:jar:7.0
   javax_javaee_endorsed: javax:javaee-endorsed-api:jar:7.0
 
+  findbugs_annotations: com.google.code.findbugs:annotations:jar:2.0.1
   javax_jsr305: com.google.code.findbugs:jsr305:jar:1.3.9
   javax_inject: javax.inject:javax.inject:jar:1
 
